test/should-fail/jfxc2278Sub.visage
/**
 * @subtest jfxc2278.visage
 */

package class jfxc2278Sub {
  public var x;
  protected function y() {};
}
